Add the session class and the locale class.

--- a/example/views/Index/index.phtml
+++ b/example/views/Index/index.phtml
@@ -1,4 +1,4 @@
-Coucou<br />
+Coucou <?=$name?><br />
 <?php foreach($news as $new): ?>
 <h2><?=$new['new_title']?></h2>
 <p><?=$new['new_content']?></p>
